@@ -34,4 +34,5 @@ test_mmap
   Try opening a bad file descriptor...
   Ensuring that passing 0 as map length sets map size to current file size.
   Ensuring that passing 0 as map length sets map size to current file size.
+  anonymous mmap.mmap(-1, PAGESIZE)...
  Test passed
